KDT2PROJ-4 사용자 목록페이지 UI 제작 완료-페이지네이션 없음

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -31,14 +31,19 @@
   margin-left: 5px;
 }
 
-.headerRight div {
-  font-size: 30px;
+.headerRight * {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  font-size: 25px;
   color: #b5b5bb;
 }
 .headerRight div:not(:first-child) {
   margin-left: 18px;
 }
 .profileImg {
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
 }
