KDT2PROJ-3 헤더랑 네비바 주소 연결 완료

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -19,7 +19,8 @@
   color: #095544;
 }
 
-.headerLeft__dropNav {
+.headerLeft__dropNav,
+.headerLeft__Nav {
   border-radius: 5px;
   padding: 5px 10px;
   margin-left: 10px;
@@ -27,6 +28,7 @@
 .headerLeft__dropNav:hover {
   background-color: #dcedd4;
 }
+
 .dropNav__icon {
   margin-left: 5px;
 }
