--- a/src/pages/Office/User/components/WorkTypeModal/WorkTypeModal.module.css
+++ b/src/pages/Office/User/components/WorkTypeModal/WorkTypeModal.module.css
@@ -59,11 +59,12 @@
 
 /* 셀렉터 */
 .selectionValue {
-  padding: 10px;
+  padding: 5px 10px;
   border: 1px solid #7d7d7d40;
   border-radius: 4px;
   display: flex;
   justify-content: space-between;
+  font-size: 14px;
 }
 .select__option {
   border: 1px solid #7d7d7d40;
@@ -77,6 +78,7 @@
   /* transform: translate(-50%, -50%); */
   transform: translateX(-50%);
   width: calc(100% - 60px);
+  font-size: 14px;
 }
 .option__item {
   padding: 10px;
