--- a/src/pages/Office/User/UserManaged/UserManaged.module.css
+++ b/src/pages/Office/User/UserManaged/UserManaged.module.css
@@ -14,6 +14,10 @@
   align-items: center;
   margin-bottom: 30px;
 }
+.userManagedMenu {
+  display: flex;
+  justify-content: space-between;
+}
 .userMenu {
   display: flex;
   margin-left: 10px;
@@ -34,6 +38,21 @@
   font-size: 16px;
   color: #095544;
   cursor: pointer;
+}
+
+.search {
+  display: flex;
+  align-items: center;
+}
+.search__prefix {
+  margin: 0 10px;
+}
+.search__prefix * {
+  color: #b5b5bb;
+}
+.search > input {
+  border: none;
+  outline: none;
 }
 
 input[type="checkbox"] {
