--- a/src/components/Header/NaviModal/NaviModal.module.css
+++ b/src/components/Header/NaviModal/NaviModal.module.css
@@ -5,6 +5,8 @@
   background-color: white;
   border-radius: 4px;
   padding: 20px;
+  border: 1px solid #7d7d7d40;
+  background-color: #f3f7f1;
 }
 .subnaviBar div {
   display: flex;
