--- a/src/pages/Office/User/UserManaged/UserManaged.module.css
+++ b/src/pages/Office/User/UserManaged/UserManaged.module.css
@@ -1,7 +1,10 @@
 .user__container {
   padding: 20px 24px;
   width: 100%;
+  height: 100%;
+  min-width: 750px;
 }
+
 .title {
   font-size: 20px;
   font-weight: 700;
@@ -44,6 +47,7 @@
 .search {
   display: flex;
   align-items: center;
+  width: 200px;
 }
 .search__prefix {
   margin: 0 10px;
@@ -54,6 +58,7 @@
 .search > input {
   border: none;
   outline: none;
+  width: 80%;
 }
 
 input[type="checkbox"] {
