input 크기 width200 height32로 고정

--- a/src/pages/Accounting/Home/components/UpdateModal/UpdateModal.module.css
+++ b/src/pages/Accounting/Home/components/UpdateModal/UpdateModal.module.css
@@ -84,3 +84,9 @@
     background-color: #75b47d;
     color: white;
   }
+
+   /* 인풋 */
+   input[type="text"]{
+    width: 200px;
+    height: 32px;
+  }
