--- a/src/components/Header/NaviModal/NaviModal.module.css
+++ b/src/components/Header/NaviModal/NaviModal.module.css
@@ -6,7 +6,7 @@
   border-radius: 4px;
   padding: 20px;
   border: 1px solid #7d7d7d40;
-  background-color: #f3f7f1;
+  z-index: 999;
 }
 .subnaviBar div {
   display: flex;
