--- a/src/pages/Office/PositionDuty/PositionDuty.module.css
+++ b/src/pages/Office/PositionDuty/PositionDuty.module.css
@@ -13,19 +13,24 @@
 }
 
 .position__div{
-
+    width: 100%;
+    height:640px;
 }
 
 .position__leftdiv{
-
+    width:60%;
+    height: 100%;
+    overflow-y:auto;
+    float:left;
 }
 
 .postion__rightdiv{
-    
+    width:40%;
+    float:right;
 }
 
 .position__table {
-    width: 60%;
+    width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
 }
@@ -38,6 +43,13 @@
 
 .position__plus{
     color:white;
+}
+
+.position__cellsec{
+
+    padding: 10px 15px;
+    text-align: center;
+    background-color: #dcedd4;
 }
 
 .position__cell {
@@ -57,4 +69,71 @@
 
 .position__addButton:hover {
     background-color: #095544;
+}
+
+.position__menubox{
+    width:100%;
+    padding:10px;
+}
+
+.position__insertbox{
+    padding-left:15px;
+    padding-top: 5px;
+    padding-bottom : 5px;   
+}
+
+.position__modifybox{
+    padding-left:15px;
+    padding-top:10px;
+    padding-bottom : 5px;
+}
+
+.position__deletebox{
+    padding-left:15px;
+    padding-top:10px;
+    padding-bottom : 5px;
+}
+
+.position__radiobox{
+    padding-left:15px;
+    padding-top:10px;
+    padding-bottom : 5px;
+}
+
+.position__insertinput{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    border-radius: 8px;
+}
+
+.position__Btn{
+    width:100px;
+    height:32px;
+    border-radius: 8px;
+    border:none;
+    padding: 0 10px 0 10px ;
+    background-color: #dcedd4;
+    cursor: pointer;
+    transition-duration: 0.3s;
+}
+
+.position__selectedPositionInfo{
+    font-size:x-small;
+    color:#a0a0a0;
+}
+
+.position__Btn:hover{
+    background-color: #095544;
+    color:#e0e0e0;
+}
+
+.position__deleteform{
+    margin-top : 10px;
+    margin-bottom : 10px;
+}
+
+.position__radioform{
+    margin-top : 10px;
+    margin-bottom : 10px;
 }
