--- a/src/pages/Office/OrgManage/components/OrgNode/OrgNode.module.css
+++ b/src/pages/Office/OrgManage/components/OrgNode/OrgNode.module.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    min-width: 150px;
+    min-width: 160px;
     line-height: 20px;
     padding: 5px;
     text-align: center;
@@ -16,6 +16,8 @@
     margin-top: -15px;
     transition-duration: 0.3s;
     cursor:default;
+    z-index: 3;
+    background-color: white;
 }
 
 .tree__label:hover{
