--- a/src/pages/Office/PositionDuty/PositionDuty.module.css
+++ b/src/pages/Office/PositionDuty/PositionDuty.module.css
@@ -24,6 +24,22 @@
     float:left;
 }
 
+.position__leftdiv::-webkit-scrollbar {
+    width: 20px;
+}
+
+.position__leftdiv::-webkit-scrollbar-thumb {
+    background-color: #7d7d7d20;
+    border-radius: 10px;
+
+    border: 7px solid #FFFFFF
+}
+
+.position__leftdiv::-webkit-scrollbar-track {
+    background-color: #FFFFFF
+}
+
+
 .postion__rightdiv{
     width:40%;
     float:right;
